--- a/Python/myproject/home/Templates/home.html
+++ b/Python/myproject/home/Templates/home.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+  {% load static %}
+  <!DOCTYPE html>
 <html>
 
 <head>
 	<title>Simple web page Template</title>
-	<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -293,7 +293,7 @@
 		</div>
 
 		<div class="thumbnail">
-			<img src="img.png"
+  <img src="{% static 'images/rocket.png' %}"
 				alt="laptop image">
 		</div>
 	</section>
